add form validition

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ description: >-
 
           <br>
           <br>
-          <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" rel="noreferrer" target="_blank"><img alt="link to zencare" src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img alt="zencare" src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" style="display: block; width: 100%;"></a> </div>
+          <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" rel="noreferrer" target="_blank"><img alt="link to zencare" src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img alt="zencare" src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" rel="noreferrer" style="display: block; width: 100%;"></a> </div>
           <br>
           <div class="row justify-content-center">
             <div  style="background-color:white; max-width: 325px">
