change images, remove empl

--- a/_pages/meet-our-team.html
+++ b/_pages/meet-our-team.html
@@ -2,7 +2,7 @@
 layout: default
 title: Meet Our Team
 description: >-
-  Meet our team of qualified individuals. Owner/Founder Sary Rottenberg LMHC, Alan Devine-Dunn MHC-LP, Rene Gonzalez LMHC, Cassandra Robertson-Benjamin MHC-LP, Madison Liddle MHC-LP.
+  Meet our team of qualified individuals. Owner/Founder Sary Rottenberg LMHC, Alan Devine-Dunn MHC-LP, Cassandra Robertson-Benjamin MHC-LP, Madison Liddle MHC-LP.
 permalink: /meet-our-team/
 ---
 <!-- Page Content -->
