change script.js, fix manifest link index.html

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -14,7 +14,28 @@ permalink: /contact/
       <h1 class="page-header-2">
         Schedule a Free Consultation
       </h1>
-    {% include form.html %}
+     
+        <p class="email-list">
+          <a href="mailto:{{site.data.employees.sary.email}}">
+            <i class="fas fa-envelope"></i>
+          {{site.data.employees.sary.name}}</a>
+          <!-- <span class="phone">203-518-4177</span> -->
+          <br />
+          <a href="mailto:{{site.data.employees.alana.email}}">
+            <i class="fas fa-envelope"></i>
+          {{site.data.employees.alana.name}}</a>
+          <!-- <span class="phone">646-397-6235</span> -->
+          <br />
+          <a href="mailto:{{site.data.employees.cassandra.email}}">
+            <i class="fas fa-envelope"></i>
+          {{site.data.employees.cassandra.name}}</a>
+          <br />
+          <a href="mailto:{{site.data.employees.madison.email}}">
+            <i class="fas fa-envelope"></i>
+          {{site.data.employees.madison.name}}</a>
+          <br />
+        </p>
+      
     </div>
 
     <div class="col-lg-6 col-md-6 col-sm-12">
