small fixes, center profile pics, email icons

--- a/_pages/employees/sary-rottenberg.html
+++ b/_pages/employees/sary-rottenberg.html
@@ -13,7 +13,7 @@ permalink: /sary-rottenberg/
   </div>
 </div>
   <div class="row">
-    <div class="col-lg-4 col-md-4 col-sm-12">
+    <div class="col-lg-4 col-md-4 col-sm-12 employee-headshot">
       <img src="{{site.data.employees.sary.image}}" alt="{{site.data.employees.sary.name}}" class="img-fluid headshot">
       <div class="col caption-btn">
             <a href="mailto:{{site.data.employees.sary.email}}?subject=Schedule%20Appointment:%20Mail%20From%20rottenbergtherapy.com"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Schedule</button></a>
