--- a/_pages/employees/madison-liddle.html
+++ b/_pages/employees/madison-liddle.html
@@ -9,7 +9,7 @@ permalink: /madison-liddle/
     <h2 class="page-header">{{site.data.employees.madison.name}}</h2>
   </div></div>
   <div class="row">
-    <div class="col-lg-4 col-md-4 col-sm-12">
+    <div class="col-lg-4 col-md-4 col-sm-12 employee-headshot"> 
       <img src="{{site.data.employees.madison.image}}" alt="{{site.data.employees.madison.name}}" class="img-fluid headshot">
       <div class="col caption-btn">
           <a href="mailto:{{site.data.employees.madison.email}}?subject=Schedule%20Appointment:%20Mail%20From%20rottenbergtherapy.com"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Schedule</button></a>
