remove madison, fix htaccess

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@ description: >-
 
           <br>
           <br>
-          <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" rel="noreferrer" target="_blank"><img alt="link to zencare" src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img alt="zencare" src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" rel="noreferrer" style="display: block; width: 100%;"></a> </div>
+          <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" rel="noreferrer" target="_blank"><img alt="link to zencare" src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" rel="noreferrer" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank" rel="noreferrer"><img alt="zencare" src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" rel="noreferrer" style="display: block; width: 100%;"></a> </div>
           <br>
           <div class="row justify-content-center">
             <div  style="background-color:white; max-width: 325px">
-              <a href="http://www.mywellbeing.com"><img alt="link to mywellbeing" style="max-width:300px; border: solid white 3px" src="/assets/img/mywellbeing-logo-MWB.png" alt="wellbeing"></a>
+              <a href="http://www.mywellbeing.com" rel="noreferrer"><img alt="link to mywellbeing" style="max-width:300px; border: solid white 3px" src="/assets/img/mywellbeing-logo-MWB.png" alt="wellbeing" rel="noreferrer"></a>
             </div>
           </div>
 
