add nisreen, remove POC from specialties, plug virtual appts, update address and contact

--- a/_pages/specialties.html
+++ b/_pages/specialties.html
@@ -181,7 +181,7 @@ permalink: /specialties/
       </div>
     </div>
 
-    <div class="row justify-content-center">
+    <!-- <div class="row justify-content-center">
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="row justify-content-center">
           <div class="box box-10"></div>
@@ -196,7 +196,7 @@ permalink: /specialties/
 
       </p>
       </div>
-    </div>
+    </div> -->
 
     <div class="row justify-content-center">
       <div class="col-lg-8 col-md-8 col-sm-12">
