--- a/_pages/meet-our-team.html
+++ b/_pages/meet-our-team.html
@@ -2,7 +2,7 @@
 layout: default
 title: Meet Our Team
 description: >-
-  Meet our team of qualified individuals. Owner/Founder Sary Rottenberg LMHC, Alan Devine-Dunn MHC-LP, Cassandra Robertson-Benjamin MHC-LP, Madison Liddle MHC-LP.
+  Meet our team of qualified individuals. Owner/Founder Sary Rottenberg LMHC, Alan Devine-Dunn MHC-LP, Cassandra Robertson-Benjamin MHC-LP, Nisreen Osseili MHC-LP.
 permalink: /meet-our-team/
 ---
 <!-- Page Content -->
@@ -11,6 +11,7 @@ permalink: /meet-our-team/
   <div class="row-fluid header">
     <div class="col-sm-12">
       <h1 class="page-header">Meet Our Team</h1>
+      
     </div>
   </div>
 </div>
