--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ description: >-
               {% for employee in site.data.employees %}
                 {% assign name = employee[1].name %}
                 {% assign email = employee[1].email %}
+                {% assign phone = employee[1].phone %}
                 <a id="contact-list" href="mailto:{{ email }}?subject=Schedule%20Appointment:%20Mail%20From%20rottenbergtherapy.com">
                 <i class="fas fa-envelope"></i> {{name}}
                 </a>| {{email}}
@@ -87,7 +88,10 @@ description: >-
               <a href="http://www.mywellbeing.com" rel="noreferrer"><img alt="link to mywellbeing" style="max-width:300px; border: solid white 3px" src="/assets/img/mywellbeing-logo-MWB.png" alt="wellbeing" rel="noreferrer"></a>
             </div>
           </div>
-
+          <div class="row justify-content-center">
+            <a href="https://www.inclusivetherapists.com" title="Find me on Inclusive Therapists" target="_blank"><img
+                style="padding: 25px" src="https://www.inclusivetherapists.com/images/badges/12.png" border="0"></a>
+          </div>
         </div>
       </div>
   </div>
