add text to specialty.yaml, update page

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -36,6 +36,15 @@ permalink: /contact/
         <h3 class="page-header-2">
           Listed On:
         </h3>
+        <div class="row" style="max-width: 250px; margin-left: 25px ">
+          <!-- Professional verification provided by Psychology Today -->
+          <a href="https://www.psychologytoday.com/profile/168066" class="sx-verified-seal"></a>
+          <script type="text/javascript" src="https://member.psychologytoday.com/verified-seal.js" data-badge="17"
+            data-id="168066"
+            data-code="aHR0cHM6Ly93d3cucHN5Y2hvbG9neXRvZGF5LmNvbS9hcGkvdmVyaWZpZWQtc2VhbC9zZWFscy9bQkFER0VdL3Byb2ZpbGUvW1BST0ZJTEVfSURdP2NhbGxiYWNrPXN4Y2FsbGJhY2s="></script>
+          <!-- End Verification -->
+        </div>
+        <br />
         <div style="max-width: 250px; margin-left: 25px "> <a href="https://zencare.co" target="_blank"
             rel="noreferrer"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png"
               style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img
