--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@ description: >-
 
           <br>
           <br>
+          <div class="row justify-content-center">
+            <!-- Professional verification provided by Psychology Today -->
+            <a href="https://www.psychologytoday.com/profile/168066" class="sx-verified-seal"></a>
+            <script type="text/javascript" src="https://member.psychologytoday.com/verified-seal.js" data-badge="17"
+              data-id="168066"
+              data-code="aHR0cHM6Ly93d3cucHN5Y2hvbG9neXRvZGF5LmNvbS9hcGkvdmVyaWZpZWQtc2VhbC9zZWFscy9bQkFER0VdL3Byb2ZpbGUvW1BST0ZJTEVfSURdP2NhbGxiYWNrPXN4Y2FsbGJhY2s="></script>
+            <!-- End Verification -->
+          </div>
+          <br>
           <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" rel="noreferrer" target="_blank"><img alt="link to zencare" src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" rel="noreferrer" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank" rel="noreferrer"><img alt="zencare" src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" rel="noreferrer" style="display: block; width: 100%;"></a> </div>
           <br>
           <div class="row justify-content-center">
