finish styling new pages, add page-header to specialty.yml for h1 tag

--- a/_pages/lgbtqia-counseling.html
+++ b/_pages/lgbtqia-counseling.html
@@ -10,7 +10,7 @@ permalink: /lgbtqia-counseling/
 <div class="container full-width-container">
     <div class="row header">
         <div class="col-12">
-            <h1><strong>LGBTQIA Counseling</strong></h1>
+            <h1><strong>{{site.data.specialty.lgbtqia[0].page-header}}</strong></h1>
         </div>
     </div>
     {% for section in site.data.specialty.lgbtqia %}
