--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ description: >-
     <div class="row justify-content-center">
       <div class="col-12 front-statement" id="section-one">
         <div>
-            <h2>Welcome to Rottenberg Therapy! Our dedicated team of therapists is committed to providing you with empathic care. Learn more about how we can help you.</h2>
+            <p>Welcome to Rottenberg Therapy! Our dedicated team of therapists is committed to providing you with empathic care. Learn more about how we can help you.</p>
           <br>
             <a href="{% link _pages/services.html %}">
             <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Our Services</button>
