add images to assets

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ description: >-
     </div>
   </div>
 </header>
-<!-- /End Hero Image Begin Front Statement -->
+<!--------- /End Hero Image Begin Front Statement --------------->
   <div class="container full-width-container">
     <div class="row justify-content-center">
       <div class="col-12 front-statement" id="section-one">
@@ -52,7 +52,7 @@ description: >-
         </div>
       </div>
 
-<!-- office photo and contact info -->
+<!------------- office photo and contact info ---------------------->
       <div class="row justify-content-center">
         <div class="col-lg-6 col-md-12 col-sm-12 office">
         </div>
@@ -78,7 +78,6 @@ description: >-
           <a href="{% link _pages/contact.html %}">
             <button class="mdc-button mdc-button--raised">Schedule a Free Consultation</button>
           </a>
-
           <br>
           <br>
           <div class="row justify-content-center">
