--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -16,8 +16,8 @@ permalink: /contact/
 
     <div class="col-lg-8 col-md-12 col-sm-12">
       
-      <h1 class="page-header-2">
-        Schedule a Free Consultation
+      <h1>
+        <strong>Schedule a Free Consultation</strong>
       </h1>
      
         <p class="email-list">
