--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ description: >-
               <a href="http://www.mywellbeing.com" rel="noreferrer"><img alt="link to mywellbeing" style="max-width:300px; border: solid white 3px" src="/assets/img/mywellbeing-logo-MWB.png" alt="wellbeing" rel="noreferrer"></a>
             </div>
           </div>
-          <div class="row justify-content-center">
+          <div class="row justify-content-center inclusive">
             <a href="https://www.inclusivetherapists.com" title="Find me on Inclusive Therapists" target="_blank"><img
                 style="padding: 25px" src="https://www.inclusivetherapists.com/images/badges/12.png" border="0"></a>
           </div>
