change photos, correct spacing

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -58,7 +58,7 @@ permalink: /contact/
           </div>
         </div>
         <div class="row">
-          <a href="https://www.inclusivetherapists.com" title="Find me on Inclusive Therapists" target="_blank"><img style="padding: 25px"
+          <a href="https://www.inclusivetherapists.com" title="Find me on Inclusive Therapists" target="_blank"><img style="padding: 25px; margin-bottom: 100px"
               src="https://www.inclusivetherapists.com/images/badges/12.png" border="0"></a>
         </div>
     </div>
