--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -9,7 +9,8 @@ permalink: /contact/
 <div class="container">
   <div class="row">
     <div id="contact-page-header" class="col-lg-12 col-md-12 col-sm-12">
-      <h3 class="page-header-2">Virtual and In-Person Appointments Available</h3>
+      <h2 class="page-header-2">Virtual and In-Person Appointments Available</h2>
+      <h4 class="page-header-2"><a href="https://drive.google.com/file/d/1gk4rd7I5qdwqqgqO2MuCt8YHtUDQIs2H/view?usp=drive_web" target="_blank">Click here for Important Information Regarding the No Surpise Act Effective January 1, 2022</a></h4>
     </div>
 </div>
   <div class="row justify-content-center map">
